@@ -1,84 +1,67 @@
+import com.github.jengelman.gradle.plugins.shadow.transformers.Log4j2PluginsCacheFileTransformer
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
+
 plugins {
     id 'java'
     id 'application'
-    id "org.openjfx.javafxplugin" version "0.1.0"
-    id "org.beryx.runtime" version "2.0.1"
+    id 'com.github.johnrengelman.shadow' version "8.1.1"
+}
+tasks {
+    shadowJar {
+        archiveClassifier.set("build")
+        manifest {
+            attributes["Main-Class"] = "net.thorioum.Eidolon"
+            attributes("Multi-Release": "true")
+        }
+        transform(Log4j2PluginsCacheFileTransformer)
+        mergeServiceFiles()
+    }
+    jar {
+        enabled = false
+    }
+}
+configurations {
+    implementation.extendsFrom(library)
+    shadow.extendsFrom(library)
 }
 
 group = 'net.thorioum'
 version = '1.01'
 
 application {
-    mainClass.set("net.thorioum.Eidolon")
-}
+    mainClass.set("net.thorioum.Eidolon")}
 
 java {
     toolchain { languageVersion = JavaLanguageVersion.of(21) }
+    modularity.inferModulePath = true
 }
 
 repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
-    maven { url "https://mvn.0110.be/releases" }
-}
-
-javafx {
-    version = "21.0.3"
-    modules = [ "javafx.controls", "javafx.fxml" ]
+    maven { url 'https://mvn.0110.be/releases' }
 }
 
 dependencies {
-    implementation("com.google.code.gson:gson:2.13.2")
+    library("com.google.code.gson:gson:2.13.2")
+    library("com.google.code.gson:gson:2.13.2")
 
-    implementation('org.slf4j:slf4j-api:2.0.12')
-    implementation('org.slf4j:slf4j-log4j12:2.0.12')
+    library("com.github.felipeucelli:javatube:a9fb5e34db")
 
-    implementation('com.github.felipeucelli:javatube:a9fb5e34db')
+    library("be.tarsos.dsp:jvm:2.5")
+    library("be.tarsos.dsp:core:2.5")
+    library("com.googlecode.soundlibs:vorbisspi:1.0.3.3")
+    library("com.googlecode.soundlibs:tritonus-share:0.3.7.4")
 
-    implementation("be.tarsos.dsp:jvm:2.5")
-    implementation("be.tarsos.dsp:core:2.5")
+    library("org.bytedeco:javacv:1.5.10")
+    library("org.bytedeco:ffmpeg:6.1.1-1.5.10:windows-x86_64")
+    library("org.bytedeco:ffmpeg:6.1.1-1.5.10:linux-x86_64")
 
-    implementation("org.bytedeco:javacv:1.5.10")
-    implementation("org.bytedeco:ffmpeg:6.1.1-1.5.10:windows-x86_64")
-
-    implementation('org.jocl:jocl:2.0.5')
-    implementation('io.github.mkpaz:atlantafx-base:2.1.0')
+    library("org.jocl:jocl:2.0.5")
 }
-
-
-// Copy JavaFX jars out of build/image/lib AFTER the image is created
-tasks.register('copyJavaFxToImage', Copy) {
-    from("$buildDir/image/lib") {
-        include "javafx-*.jar"
-    }
-    into("$buildDir/image/javafx")
-}
-
-tasks.named('runtime') {
-    finalizedBy(tasks.named('copyJavaFxToImage'))
-}
-runtime {
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-
-    modules = [
-            'java.base',
-            'java.desktop',
-            'java.logging',
-            'java.scripting',
-            'java.xml',
-            'jdk.unsupported',
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += [
+            "-Alog4j.graalvm.groupId=${project.group}",
+            "-Alog4j.graalvm.artifactId=${project.name}"
     ]
-
-    launcher {
-
-        jvmArgs = [
-                '--module-path', '..\\javafx',
-                '--add-modules', 'javafx.controls,javafx.fxml'
-        ]
-
-    }
-
-    jpackage {
-        imageOptions = ['--win-console=false']
-    }
 }
